# bazel-tests

./: .bazelrc  WORKSPACE
mixed/: BUILD.bazel  Makefile  README.md
mixed/mixed-test/: SwiftObj.swift
mixed/mixed-test.xcodeproj/: project.pbxproj
mixed/mixed-test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mixed/mixed-test.xcodeproj/project.xcworkspace/xcuserdata/obonilla.xcuserdatad/: UserInterfaceState.xcuserstate
mixed/mixed-test.xcodeproj/xcuserdata/obonilla.xcuserdatad/xcschemes/: xcschememanagement.plist
spaces/: BUILD  arule.bzl
spaces/adir/: foo.c
test/: BUILD  code.swift  dep.h  dep.m  trans.h  trans.m  trans_private.h
test/deep/dep/: dep_deep.h
test/deep/trans/: trans_deep.h  trans_private_deep.h
